--- a/prenotazionePJ/src/main/resources/templates/form.html
+++ b/prenotazionePJ/src/main/resources/templates/form.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/getPrens">Tabella</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="gestPren">Modifica prenotazione</a>
+      </li>
     </ul>
   </div>
 </nav>
