--- a/prenotazionePJ/src/main/resources/templates/home.html
+++ b/prenotazionePJ/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Home</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/getPrens">Tabella</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="gestPren">Modifica prenotazione</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -37,6 +40,38 @@
   <p class="lead">Questo semplice prototipo permette di prenotare viaggi o annullarli.</p>
   <hr class="my-4">
   <p>Per eventuali implementazioni rivolgersi a Marilyn.</p>
+</div>
+<div class="container">
+  <form action="/listVoli" method="get">
+    <div class="form-row align-items-center">
+      <div class="col-4">
+        <label class="sr-only" for="inlineFormInput">Partenza</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">Da:</div>
+          </div>
+          <input type="text" class="form-control" id="inlineFormInput" placeholder="Partenza" name="partenza" required>
+        </div>
+      </div>
+      <div class="col-4">
+        <label class="sr-only" for="inlineFormInputGroup">Destinazione</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text">A:</div>
+          </div>
+          <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Destinazione" name="destinazione" required>
+        </div>
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-warning mb-2">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg>
+          Cerca</button>
+      </div>
+    </div>
+  </form>
+  
 </div>
 
 </body>
