--- a/prenotazionePJ/src/main/resources/templates/gestPren.html
+++ b/prenotazionePJ/src/main/resources/templates/gestPren.html
@@ -22,10 +22,10 @@
         <a class="nav-link" href="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="form">Form</a>
+        <a class="nav-link" href="info">Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/getPrens">Tabella</a>
+        <a class="nav-link" href="/getPrens">Prenotazioni</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestPren">Modifica prenotazione</a>
@@ -43,7 +43,7 @@
         <div class="card-body">
           <h5 class="card-title">Cerca la tua prenotazione</h5>
           <h6 class="card-subtitle mb-2 text-muted">Compila i dati richiesti.</h6>
-          <form action="" method="get">
+          <form action="/findPrenByCod" method="get">
             <div class="form-group">
               <label for="nomeUtente">Nome</label>
               <input type="text" class="form-control" id="nomeUtente" name="nome">
