--- a/prenotazionePJ/src/main/resources/templates/home.html
+++ b/prenotazionePJ/src/main/resources/templates/home.html
@@ -23,10 +23,10 @@
         <a class="nav-link" href="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="form">Form</a>
+        <a class="nav-link" href="info">Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/getPrens">Tabella</a>
+        <a class="nav-link" href="/getPrens">Prenotazioni</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestPren">Modifica prenotazione</a>
@@ -41,7 +41,7 @@
   <hr class="my-4">
   <p>Per eventuali implementazioni rivolgersi a Marilyn.</p>
 </div>
-<div class="container">
+<div class="container" style="margin-left: 200px;">
   <form action="/listVoli" method="get">
     <div class="form-row align-items-center">
       <div class="col-4">
