--- a/prenotazionePJ/src/main/resources/templates/listaVoli.html
+++ b/prenotazionePJ/src/main/resources/templates/listaVoli.html
@@ -22,10 +22,10 @@
         <a class="nav-link" href="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="form">Form</a>
+        <a class="nav-link" href="info">Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/getPrens">Tabella</a>
+        <a class="nav-link" href="/getPrens">Prenotazioni</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestPren">Modifica prenotazione</a>
@@ -33,6 +33,17 @@
     </ul>
   </div>
 </nav>
+<br>
+<div class="container text-center">
+  <h4>Seleziona il tuo volo</h4>
+</div>
+<br>
+<div class="container">
+  <div class="progress">
+    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div>
+<br>
 <div class="container">
 	<table class="table table-hover">
   <thead>
