--- a/prenotazionePJ/src/main/resources/templates/recapPren.html
+++ b/prenotazionePJ/src/main/resources/templates/recapPren.html
@@ -23,10 +23,10 @@
         <a class="nav-link" href="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="form">Form</a>
+        <a class="nav-link" href="info">Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/getPrens">Tabella</a>
+        <a class="nav-link" href="/getPrens">Prenotazioni</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestPren">Modifica prenotazione</a>
@@ -43,37 +43,27 @@
         <p th:text="${volo.destinazione}"></p>
     </div>
 </nav>
+<br>
 <div class="container text-center">
   <h3>Verifica i tuoi dati</h3>
 </div>
+<br>
 <div class="container">
   <div class="progress">
     <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 </div>
-<!-- <div class="container">
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Hai già un account?</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Login</h6>
-          <p class="card-text">Effettua il login per non perdere le prenotazioni effettuate.</p>
-          <a href="#" class="card-link">Login</a>
-          <a href="#" class="card-link">Registrati</a>
-        </div>
-      </div>
-</div> -->
+<br>
 <div class="container">
     <form th:action="@{/confirmPren}" method="post">
-    <div class="card border-warning mb-3" style="max-width: 18rem;">
-        <div class="card-header bg-transparent border-warning">
-            <h5>Riepilogo</h5>
+    <div class="card border-warning mb-3" style="max-width: 35rem; margin-left: 270px;">
+        <div class="card-header bg-transparent border-warning text-center">
+            <h5>Riepilogo prenotazione</h5>
         </div>
         <div class="card-body">
-            <div class="container">
-                <h5 class="card-title">Riepilogo prenotazione</h5>
-                <p class="card-text">Verifica i dati prima di proseguire.</p>
+            <div class="container text-center">
+                <p class="card-title">Verifica la correttezza dei dati prima di proseguire</p>
             </div>
-            <br>
             <div class="container">
                 <input type="text" th:value="${volo.id}" name="voloId" hidden>
                 <input type="hidden" th:field="${volo.partenza}"/>
